master
(1:0:0)

  (none yet)



1.2.1        2014-02-11
(1:0:0)

  [ENHANCEMENTS]
  - Hash-based PDU serialization / de-serialization
    pdu_t + hash_t = awesomeness for extensible protocols!

  - Heartbeat implementation
    hb_t structure and hb_*() functions can be used to implement
    time-based delays with a backoff algorithm.

  - New tests for run2() UID / GID handling
    Ensure that we are honoring the UID / GID specifications
    given in runner_t.  Must run the tests as root to test.



1.2.0        2014-02-06
(1:0:0)

  [ENHANCEMENTS]
  - New ha_* implementation
    Implements the Binary Star HA pattern, from the ZeroMQ
    project.  Replaces the existing bstar_* functions / typedefs.



1.1.3        2014-01-27
(0:0:0)

  [ENHANCEMENTS]
  - New cache_isempty()  / cache_isfull() interface for querying
    if a cache is empty or full (respectively)

  - The 'len' parameter of cache_t was not used, and has been removed
    (replaced with a dummy member that will be ignored)

  [BUG FIXES]
  - Strip out comments when parsing configurations
    (pseudo-regression introduced in 1.1.2)



1.1.2        2014-01-26
(0:0:0)

  [BUG FIXES]

  - Support multi-token config values, for lines like:
    "sys.command    /bin/path/to/command --options"



1.1.1        2014-01-12
(0:0:0)

  started tracking changes in CHANGELOG